apply fix for CVE-2023-51651

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "laravel/telescope": "^4.14",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/phpinsights": "^2.11",
         "pestphp/pest": "^2.34",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-ray": "^1.33"
@@ -96,7 +97,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "minimum-stability": "stable",
